--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
+  "type": "module",
   "dependencies": {
     "axios": "^1.7.9",
+    "chalk": "^4.1.2",
     "is-reachable": "^5.2.1",
     "validator": "^13.12.0"
   }
